--- a/admin/src/main/resources/templates/system/input/add.html
+++ b/admin/src/main/resources/templates/system/input/add.html
@@ -8,11 +8,21 @@
 <div class="layui-form timo-compile">
     <form th:action="@{/system/input/save}">
         <input type="hidden" name="id" th:if="${input}" th:value="${input.id}"/>
+<!--        <div class="layui-form-item">-->
+<!--            <label class="layui-form-label required">商品图片</label>-->
+<!--            <div class="layui-input-inline">-->
+<!--                <input class="layui-input" type="text" name="prodpicture"  placeholder="请输入商品图片" th:value="${input?.prodpicture}">-->
+<!--            </div>-->
+<!--        </div>-->
         <div class="layui-form-item">
-            <label class="layui-form-label required">商品图片</label>
+            <label class="layui-form-label">上传图片</label>
             <div class="layui-input-inline">
-                <input class="layui-input" type="text" name="prodpicture"  placeholder="请输入商品图片" th:value="${input?.prodpicture}">
+                <button type="button" class="layui-btn upload-image" name="image[]"
+                        th:attr="up-url=@{/upload/image}" up-field="path">
+                    <i class="layui-icon">&#xe67c;</i>上传图片
+                </button>
             </div>
+            <div class="upload-show"></div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label required">商品名称</label>
